access/ghost-ingress.yaml
# ghost app
apiVersion: v1
kind: Pod
metadata:
  name: ghost
  labels:
    run: ghost
spec:
  containers:
  - image: ghost
    name: ghost
    ports:
    - containerPort: 2368
      protocol: TCP
---
# ghost service #1
apiVersion: v1
kind: Service
metadata:
  labels:
    run: ghost
  name: ghost
spec:
  ports:
  - port: 2368
    protocol: TCP
    targetPort: 2368
  selector:
    run: ghost
---
# Create the ingress resource
# https://github.com/kubernetes/contrib/blob/master/ingress/controllers/nginx/examples/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ghost
spec:
  rules:
  - http:
      paths:
      - path: /ghost
        backend:
          serviceName: ghost
          servicePort: 2368
